fix: #666 clinical sign small defect
- Wrong color for theme variable
- Misaligned icon

--- a/client/src/style/themes/colors.less
+++ b/client/src/style/themes/colors.less
@@ -1,37 +1,39 @@
-@blue-base: #00ACEB;
-@blue-1: #EAF3FA;
-@blue-2: #B5E6F7;
-@blue-3: #86D5F2;
-@blue-4: #5BC5ED;
-@blue-5: #3EB8EA;
-@blue-6: #2AABE8;
-@blue-7: #249ED9;
-@blue-8: #1D8BC6;
-@blue-9: #1B7AB2;
-@blue-10: #125A90;
+@blue-base: #00aceb;
+@blue-1: #eaf3fa;
+@blue-2: #b5e6f7;
+@blue-3: #86d5f2;
+@blue-4: #5bc5ed;
+@blue-5: #3eb8ea;
+@blue-6: #2aabe8;
+@blue-7: #249ed9;
+@blue-8: #1d8bc6;
+@blue-9: #1b7ab2;
+@blue-10: #125a90;
 
-@gray-1: #FFFFFF;
-@gray-2: #F8FAFC;
-@gray-3: #F3F5F7;
-@gray-4: #E1E8EF;
-@gray-5: #D2DBE4;
-@gray-6: #A7B4C3;
-@gray-7: #7E8DA0;
+@gray-1: #ffffff;
+@gray-2: #f8fafc;
+@gray-3: #f1f5f9;
+@gray-4: #e1e8ef;
+@gray-5: #d2dbe4;
+@gray-6: #a7b4c3;
+@gray-7: #7e8da0;
 @gray-8: #536377;
 @gray-9: #233750;
-@gray-10: #0F1824;
+@gray-10: #0f1824;
 
-@red-5: #FF4D4F;
-@red-6: #F5222D;
+@red-0: #fef4f4;
+@red-5: #ff4d4f;
+@red-6: #f5222d;
 
-@green-6: #52C41A;
-@green-7: #389E0D;
+@green-6: #52c41a;
+@green-7: #389e0d;
 
-@cyan-7: #08979C;
+@cyan-7: #08979c;
 
-@orange-7: #D46B08;
+@orange-7: #d46b08;
 
-@magenta-6: #EB2F96;
+@magenta-1: #fff0f6;
+@magenta-6: #eb2f96;
 
-@border: #ABBED3;
-@layoutBG: #EDF0F3;
+@border: #abbed3;
+@layoutBG: #edf0f3;
